--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "@vkid/sdk": "^2.4.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "axios": "^1.7.7",
     "dotenv-webpack": "^8.1.0",
     "js-cookie": "^3.0.5",
