--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.14",
     "@types/node": "^22.7.7",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/react-portal": "^4.0.7",
@@ -83,6 +84,7 @@
     "dotenv-webpack": "^8.1.0",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "papaparse": "^5.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
